--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>cn.harry12800</groupId>
     <artifactId>harry12800.develper</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <build>
         <plugins>
             <plugin>
@@ -25,18 +25,18 @@
         <dependency>
             <groupId>cn.harry12800</groupId>
             <artifactId>harry12800.tools</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
         <dependency>
             <groupId>cn.harry12800</groupId>
             <artifactId>harry12800.tree2word</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
         </dependency>
-        <dependency>
+      <!--   <dependency>
             <groupId>cn.harry12800</groupId>
             <artifactId>harry12800.dbhelper</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+            <version>1.0</version>
+        </dependency> -->
         <!--freemarker-->
         <dependency>
             <groupId>org.freemarker</groupId>
